--- a/music-client/src/assets/css/home.css
+++ b/music-client/src/assets/css/home.css
@@ -1,22 +1,20 @@
-
 .home {
-  margin-top: calc(70px - 10px);
+  margin-top: 60px;
 }
 .home .section {
   width: 100%;
   margin-top: 20px;
   padding: 0 120px 50px 120px;
-  background-color: white;
+  background-color: #ffffff;
   box-sizing: border-box;
 }
-.home .section-title {
+.home .section .section-title {
   height: 60px;
   line-height: 60px;
   padding-top: 10px;
   font-size: 28px;
   font-weight: 500;
   text-align: center;
-  color: black;
+  color: #000000;
   box-sizing: border-box;
 }
-
