完成全部功能
船新的版本

--- a/music-client/src/assets/css/sign-up.css
+++ b/music-client/src/assets/css/sign-up.css
@@ -1,24 +1,49 @@
+.upload {
+  width: 100%;
+}
+.upload .title {
+  height: 50px;
+  line-height: 50px;
+  padding-left: 20px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #000000;
+}
+.upload hr {
+  width: 98%;
+}
+.upload .section {
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
 .signUp {
   position: absolute;
-  top: $header-height + 20px;
-  background-color: $color-white;
+  top: 90px;
+  background-color: #ffffff;
   border-radius: 10px;
   width: 350px;
-  margin-left: 850px;
+  margin-left: 1200px;
   padding: 30px 30px;
-
-.signUp-head {
+}
+.signUp .signUp-head {
   text-align: center;
   margin-bottom: 10px;
   font-size: 20px;
   font-weight: 600;
 }
-
-.login-btn {
-  @include layout(space-between);
-button {
+.signUp .login-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.signUp .login-btn button {
   display: block;
   width: 50%;
-}
-}
 }
